--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
             <div class="card-section is-active" id="about">
               <div class="card-content">
                 <div class="card-subtitle">Sobre</div>
-                <p class="card-desc">Atual líder e CEO da equipe HealthyLife, em busca de novas possibilidades no mercado
-                </p>
+                <p class="card-desc">Com 17 anos e natural do Rio de Janeiro, tenho experiência em gestão de pessoas e 
+                  gerenciamento de projetos de software, Banco de dados e IoT.</p>
               </div>
             </div>
           </div>
@@ -264,8 +264,8 @@
             <div class="card-section is-active" id="about">
               <div class="card-content">
                 <div class="card-subtitle">Sobre</div>
-                <p class="card-desc">Atual designer da HealthyLife, trabalhando para desenvolver nossa identidade como equipe de desenvolvimento
-                </p>
+                <p class="card-desc">Prazer, me chamo Mateus Monteiro Duarte e nasci em Boa Vista Roraima tenho 17 anos e 
+                  experiência em design e programação web.</p>
               </div>
             </div>
           </div>
@@ -283,9 +283,8 @@
             <div class="card-section is-active" id="about">
               <div class="card-content">
                 <div class="card-subtitle">Sobre</div>
-                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, explicabo dicta? Architecto esse vel 
-                  ut modi necessitatibus reprehenderit repellendus consequuntur sequi quae unde, in nobis ducimus ea officiis, qui quidem.
-                </p>
+                <p class="card-desc">Meu nome é Heloísa Adriane Quadros Mendonça, tenho 17 anos, nasci em Boa Vista-RR,
+                   conhecimento em banco de dados e Internet das coisas.</p>
               </div>
             </div>
           </div>
@@ -296,16 +295,15 @@
           <div class="card-header">
             <div class="card-cover" style="background-image: url('assets/img/profile/duda.jpg')"></div>
             <img class="card-avatar" src="assets/img/profile/duda.jpg" alt="avatar" />
-            <h1 class="card-fullname">Eduara Cristina</h1>
+            <h1 class="card-fullname">Eduarda Cristina</h1>
             <h2 class="card-jobtitle">XXX</h2>
           </div>
           <div class="card-main">
             <div class="card-section is-active" id="about">
               <div class="card-content">
                 <div class="card-subtitle">Sobre</div>
-                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, explicabo dicta? Architecto esse vel 
-                  ut modi necessitatibus reprehenderit repellendus consequuntur sequi quae unde, in nobis ducimus ea officiis, qui quidem.
-                </p>
+                <p class="card-desc">Meu nome é Eduarda Cristina Alves Medeiros, tenho 17 anos, nasci na capital do estado de
+                   Roraima, sou fluente em inglês e tenho experiência com IoT e novas tecnologias.</p>
               </div>
             </div>
           </div>
@@ -317,7 +315,7 @@
         <div class="card-conteudo" data-state="#about">
           <div class="card-header">
             <div class="card-cover" style="background-image: url('assets/img/profile/default.png')"></div>
-            <img class="card-avatar" src="assets/img/profile/default.png" alt="avatar" />
+            <img class="card-avatar" src="assets/img/profile/braia.jpeg" alt="avatar" />
             <h1 class="card-fullname">Braian Panzenhagem</h1>
             <h2 class="card-jobtitle">XXX</h2>
           </div>
@@ -325,9 +323,9 @@
             <div class="card-section is-active" id="about">
               <div class="card-content">
                 <div class="card-subtitle">Sobre</div>
-                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, explicabo dicta? Architecto esse vel 
-                  ut modi necessitatibus reprehenderit repellendus consequuntur sequi quae unde, in nobis ducimus ea officiis, qui quidem.
-                </p>
+                <p class="card-desc">Olá! Meu nome é Brhayam de Oliveira Panzenhagem, nasci no dia 08 de junho de 2005 
+                  (oito de junho de dois mil e cinco) tenho 18 anos. Sou original de Boa Vista Roraima, atualmente faço parte da equpe 
+                  do back-end.</p>
               </div>
             </div>
           </div>
