--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="card-cover" style="background-image: url('assets/img/profile/ikro.png')"></div>
             <img class="card-avatar" src="assets/img/profile/ikro.png" alt="avatar" />
             <h1 class="card-fullname">Icaro D. Paula</h1>
-            <h2 class="card-jobtitle">Front development</h2>
+            <h2 class="card-jobtitle">Front-End development</h2>
           </div>
           <div class="card-main">
             <div class="card-section is-active" id="about">
@@ -316,8 +316,8 @@
           <div class="card-header">
             <div class="card-cover" style="background-image: url('assets/img/profile/default.png')"></div>
             <img class="card-avatar" src="assets/img/profile/braia.jpeg" alt="avatar" />
-            <h1 class="card-fullname">Braian Panzenhagem</h1>
-            <h2 class="card-jobtitle">XXX</h2>
+            <h1 class="card-fullname">Brhayam Panzenhagem</h1>
+            <h2 class="card-jobtitle">Back-End development</h2>
           </div>
           <div class="card-main">
             <div class="card-section is-active" id="about">
